--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
    name: Jobs to update datas
    runs-on: ubuntu-latest
    steps:
-    # snake Animation
+    # Snake Animation
     - uses: Platane/snk@master
     id: snake-gif
     with:
