--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: samuelsoares27
+          github_user_name: Oedom
+          gif_out_path: dist/github-contribution-grid-snake-gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
